<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_gray"
    >
    <include
        android:id="@+id/in_head_setup"
        layout="@layout/head_title" />
    <RelativeLayout
        android:id="@+id/consult_rl_self_service"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/white"
        android:layout_marginTop="10dp"
        >
        <ImageView
            android:layout_marginTop="10dp"
            android:layout_marginLeft="15dp"
            android:id="@+id/consult_iv_self_service"
            android:src="@drawable/c_customer_1"
            android:layout_width="20dp"
            android:layout_height="20dp"
            />
        <TextView
            android:id="@+id/consult_tvself_service"
            android:layout_toRightOf="@+id/consult_iv_self_service"
            android:layout_alignTop="@+id/consult_iv_self_service"
            android:layout_marginLeft="10dp"
            android:text="@string/consult_self_service"
            android:textSize="18sp"
            android:textColor="@color/main_text_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <TextView
            android:layout_below="@+id/consult_tvself_service"
            android:layout_alignLeft="@+id/consult_tvself_service"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:textColor="@color/gray_text"
            android:text="@string/consult_self_service_text"
            />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/consult_rl_contact_company"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/white"
        android:layout_marginTop="10dp"
        >
        <ImageView
            android:layout_marginTop="10dp"
            android:layout_marginLeft="15dp"
            android:id="@+id/consult_iv_contact_company"
            android:src="@drawable/c_customer_2"
            android:layout_width="20dp"
            android:layout_height="20dp"
            />
        <TextView
            android:id="@+id/consult_tv_contact_company"
            android:layout_toRightOf="@+id/consult_iv_contact_company"
            android:layout_alignTop="@+id/consult_iv_contact_company"
            android:layout_marginLeft="10dp"
            android:text="@string/consult_contact_company"
            android:textSize="18sp"
            android:textColor="@color/main_text_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <TextView
            android:layout_below="@+id/consult_tv_contact_company"
            android:layout_alignLeft="@+id/consult_tv_contact_company"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:textColor="@color/gray_text"
            android:text="@string/consult_contact_company_text"
            />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/consult_rl_cpoa"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/white"
        android:layout_marginTop="10dp"
        >
        <ImageView
            android:layout_marginTop="10dp"
            android:layout_marginLeft="15dp"
            android:id="@+id/consult_iv_cpoa"
            android:src="@drawable/c_customer_3"
            android:layout_width="20dp"
            android:layout_height="20dp"
            />
        <TextView
            android:id="@+id/consult_tv_cpoa"
            android:layout_toRightOf="@+id/consult_iv_cpoa"
            android:layout_alignTop="@+id/consult_iv_cpoa"
            android:layout_marginLeft="10dp"
            android:text="@string/consult_cpoa"
            android:textSize="18sp"
            android:textColor="@color/main_text_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <TextView
            android:layout_below="@+id/consult_tv_cpoa"
            android:layout_alignLeft="@+id/consult_tv_cpoa"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:textColor="@color/gray_text"
            android:text="@string/consult_cpoa_text"
            />
    </RelativeLayout>
</LinearLayout>
