<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_gray"
    android:orientation="vertical"
    >
    <include
        android:id="@+id/in_head_setup"
        layout="@layout/head_title" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorWhite"
        android:layout_marginTop="10dp"
        >

        <LinearLayout
            android:id="@+id/setup_ll_safety"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/setup_safety"
                android:layout_weight="1"
                android:textColor="@color/text_gray"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/m_right"
                android:layout_marginRight="15dp"
                />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:background="@color/background_gray"
            android:layout_marginLeft="10dp"
            />
        <LinearLayout
            android:id="@+id/setup_ll_new_msg"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/setup_new_msg"
                android:layout_weight="1"
                android:textColor="@color/text_gray"
                android:textSize="16sp" />
            <com.ruihua.geshuibao.CustomWidget.IosSwitch
                android:id="@+id/setup_switch_new_msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/m_right"
                android:layout_marginRight="15dp"
                />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:background="@color/background_gray"
            android:layout_marginLeft="10dp"
            />
        <LinearLayout
            android:id="@+id/setup_ll_wipe_cache"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/setup_wipe_cache"
                android:layout_weight="1"
                android:textColor="@color/text_gray"
                android:textSize="16sp" />
            <TextView
                android:id="@+id/setu_tv_cache"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0.0M"
                android:textSize="15sp"
                />
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/m_right"
                android:layout_marginRight="15dp"
                />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:background="@color/background_gray"
            android:layout_marginLeft="10dp"
            />
        <LinearLayout
            android:id="@+id/setup_ll_about_us"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/setup_about_us"
                android:layout_weight="1"
                android:textColor="@color/text_gray"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/m_right"
                android:layout_marginRight="15dp"
                />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:background="@color/background_gray"
            android:layout_marginLeft="10dp"
            />
        <LinearLayout
            android:id="@+id/setup_ll_feedback"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/setup_feedback"
                android:layout_weight="1"
                android:textColor="@color/text_gray"
                android:textSize="16sp" />
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/m_right"
                android:layout_marginRight="15dp"
                />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:background="@color/background_gray"
            />
    </LinearLayout>
    <Button
        android:id="@+id/setup_but_log_out"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:textSize="15sp"
        android:background="@color/colorWhite"
        android:text="@string/setup_log_out"
        android:textColor="#f33f3e"
        />
</LinearLayout>
