<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <ImageView
        android:id="@+id/iv_back"
        android:src="@mipmap/nav_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="center"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        />
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/join_company_bg"
        android:layout_marginTop="40dp"
        />
    <RelativeLayout
        android:id="@+id/rl_scan"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/join_company_but_bg"
        >
        <TextView
            android:layout_centerInParent="true"
            android:id="@+id/join_company_scantext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scan_join_company"
            android:textColor="@color/white"
            />
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_join_scan"
            android:layout_toLeftOf="@+id/join_company_scantext"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rl_search"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/join_company_but_bg"
        >
        <TextView
            android:layout_centerInParent="true"
            android:id="@+id/join_company_searchtext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_join_company"
            android:textColor="@color/white"
            />
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_join_search"
            android:layout_toLeftOf="@+id/join_company_searchtext"
            android:layout_centerVertical="true"
            android:layout_marginRight="30dp"
            />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        >
        <TextView
            android:textColor="@color/main_color"
            android:id="@+id/tv_applyfor_create_company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/applyfor_create_company"
            android:layout_gravity="bottom"
            />
    </LinearLayout>
</LinearLayout>
